--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>aoharkov.education.servletsproject</groupId>
+    <groupId>aoharkov.education.servlets</groupId>
     <artifactId>ServletsRepairAgency</artifactId>
     <version>0.1-SNAPSHOT</version>
 
