--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <artifactId>HikariCP</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
