feat(project): connect to MySQL database

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,3 @@
-db.url=***
+db.url=jdbc:mysql://localhost:3306/repair_service
 db.user=user
 db.password=password
-db.cachePrepStmts=true
-db.prepStmtCacheSize=250
-db.prepStmtCacheSqlLimit=2048
