--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost:3306/repair_service
-db.user=user
-db.password=password
+db.url=jdbc:mysql://localhost:3306/repair_agency
+db.user=root
+db.password=root
