--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <servlet>
-        <servlet-name>indexServlet</servlet-name>
+        <servlet-name>FrontController</servlet-name>
         <servlet-class>aoharkov.education.repairagency.controller.FrontController</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>indexServlet</servlet-name>
-        <url-pattern>/index</url-pattern>
+        <servlet-name>FrontController</servlet-name>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
