--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,6 +19,18 @@
         <url-pattern>/client/*</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>SessionFilter</filter-name>
+        <filter-class>aoharkov.training.repairagency.filter.SessionFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>SessionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
     <servlet>
         <servlet-name>ErrorHandler</servlet-name>
         <servlet-class>aoharkov.training.repairagency.controller.ErrorHandler</servlet-class>
