--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -29,7 +29,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>LocaleFilter</filter-name>
+        <filter-class>aoharkov.training.repairagency.filter.LocaleFilter</filter-class>
+    </filter>
 
+    <filter-mapping>
+        <filter-name>LocaleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <servlet>
         <servlet-name>ErrorHandler</servlet-name>
