--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -41,7 +41,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--<servlet>
+    <filter>
+        <filter-name>AuthorizationFilter</filter-name>
+        <filter-class>aoharkov.training.repairagency.filter.AuthorizationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>AuthorizationFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <servlet>
         <servlet-name>ErrorHandler</servlet-name>
         <servlet-class>aoharkov.training.repairagency.controller.ErrorHandler</servlet-class>
     </servlet>
@@ -64,5 +74,5 @@
     <error-page>
         <exception-type>java.lang.Throwable</exception-type >
         <location>/error</location>
-    </error-page>-->
+    </error-page>
 </web-app>
