--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,6 +18,7 @@
         <url-pattern>/mgr/*</url-pattern>
         <url-pattern>/master/*</url-pattern>
         <url-pattern>/client/*</url-pattern>
+        <url-pattern>/logout</url-pattern>
         <url-pattern>/error/*</url-pattern>
     </servlet-mapping>
 
